[gd_scene load_steps=4 format=2]

[ext_resource path="res://musics/awake10_megaWall.ogg" type="AudioStream" id=1]
[ext_resource path="res://ThaleahFat/new_theme.tres" type="Theme" id=2]
[ext_resource path="res://telas/SelectLevel.gd" type="Script" id=3]

[node name="SelectLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.000651836
anchor_top = 0.00111237
anchor_right = -0.000651836
anchor_bottom = 0.00111237
margin_left = 3.226
margin_top = -3.56763
margin_right = 1030.22
margin_bottom = 605.432
color = Color( 0.0431373, 0.239216, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Label" parent="."]
margin_left = 328.7
margin_top = 50.0
margin_right = 413.7
margin_bottom = 64.0
rect_scale = Vector2( 4, 4 )
text = "Select a level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 87.0
margin_top = 232.0
margin_right = 290.0
margin_bottom = 272.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="HBoxContainer"]
margin_right = 65.0
margin_bottom = 40.0
text = "Level D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="HBoxContainer"]
margin_left = 69.0
margin_right = 134.0
margin_bottom = 40.0
text = "Level P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Button" parent="HBoxContainer"]
margin_left = 138.0
margin_right = 203.0
margin_bottom = 40.0
text = "Level R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocked2" type="Button" parent="."]
margin_left = 361.0
margin_top = 231.0
margin_right = 448.0
margin_bottom = 285.0
rect_scale = Vector2( 3, 3 )
text = "Blocked"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocked3" type="Button" parent="."]
margin_left = 640.0
margin_top = 232.0
margin_right = 728.0
margin_bottom = 285.0
rect_scale = Vector2( 3, 3 )
text = "Blocked"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0
autoplay = true
[connection signal="button_down" from="HBoxContainer/Level1" to="." method="_on_Level1_button_down"]
[connection signal="button_down" from="HBoxContainer/Level2" to="." method="_on_Level2_button_down"]
[connection signal="button_down" from="HBoxContainer/Level3" to="." method="_on_Level3_button_down"]
